--- a/stylesheets/extra.css
+++ b/stylesheets/extra.css
@@ -36,7 +36,7 @@ body {
 	display: block;
 	position: absolute;
 	left: 3px;
-	top: -1px;
+	top: -2px;
 }
 
 ul li {
@@ -55,6 +55,8 @@ ul li span,
 ul li strong,
 ul li em {
 	text-transform: uppercase;
+	text-align: left;
+	display: inline-block;
 }
 ul.agenda li.is-happening {
 	font-weight: bold;
@@ -86,11 +88,15 @@ li.header:before {
 	content: "~";
 	display: inline;
 	padding-right: 5px;
+	position: relative;
+	top: 6px;
 }
 li.header:after {
 	content: "~";
 	display: inline;
 	padding-left: 5px;
+	position: relative;
+	top: 6px;
 }
 ul.agenda li time {
 	position: absolute;
@@ -100,10 +106,14 @@ h2, h3, h4, .header  {
 	text-align: center !important;
 }
 h2 span {
-	font-size: .4em;
+	font-size: .6em;
 	clear: both;
-	color: #666;
+	color: #DBDBDB;
 	display: block;
+	font-family:  "Palatino Linotype", "Book Antiqua", Palatino, serif;
+	line-height: .8;
+	position: relative;
+	top: 10px;
 }
 
 .framed {
@@ -112,17 +122,32 @@ h2 span {
 	border-width: 6px;
 	margin-bottom: 35px;
 	padding: 40px;
-	background-color: #fff;
+	background-color: #FDFDFD;
+}
+.clone {
+	display: none;	
 }
 
 @media (max-width: 500px) {
 	.framed {
 		border-width: 1px 0 0 0;
-		margin-bottom: 10px;
-		padding: 40px 30px 30px;
+		margin-bottom: 0;
+		padding: 40px 30px;
+		background-color: #fff;
+		position: relative;
+		z-index: 1;
+  	}
+  	#title {
+		position: fixed;
+  		top: 0;
+  		width: 100%;
+  	}
+  	.framed:fist-child {
+		margin-top: 286px;
   	}
   	body {
 		background-image: none;
+  		position: relative;
   	}
   	h2 {
 		line-height: 1;
@@ -138,7 +163,7 @@ h2 span {
 
 @font-face {
 font-family: "Chopin Script";
-	src: url("/fonts/ChopinScript.otf") format("opentype");
+	src: url("../fonts/ChopinScript.otf") format("opentype");
 }
 em {
 	color: #666;
@@ -146,7 +171,7 @@ em {
 	text-transform: uppercase;
 }
 a {
-	color: #9A9189;
+	color: #AC9A8A;
 	text-decoration: underline;
 	text-transform: uppercase;
 }
